# fanctrl

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-container.yml
config/: fanctrl.toml
src/fanctrl/: main.py
