[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fanctrl"
version = "1.0.0"
description = "Temperature-based fan control via GPIO"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Tobias (m00sfett)", email = "27900324+m00sfett@users.noreply.github.com" },
]
dependencies = [
    "tomli; python_version < '3.11'",
    "gpiod",
]

[project.scripts]
fanctrl = "fanctrl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fanctrl"]
